--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -20,3 +20,6 @@ block content
     div(class='row')
       div(class='col-6 text-center')
         button(id='datasets_validation' class='btn btn-primary') All Datasets processed : Finish
+
+  if demo
+    include ../forms/demo/datasets.pug
