--- a/views/documents/finish.pug
+++ b/views/documents/finish.pug
@@ -1,11 +1,11 @@
 extends ../layout
 
 block content
-  div(class='splash')
+  div(class='finish')
 
-  if document.isDataSeer
+  div(class='container-fluid')
 
-    div(class='container-fluid')
+    if document.isDataSeer
       
       div(class='row')
         div(class='col-12') Many thanks for using DataSeer. The Data Accessibility section for your article is below, please paste this into the next version your article.
@@ -21,7 +21,7 @@ block content
                     div(class='col-12')
                       if val.DOI
                         div(class='value d-block') #{val.name} : 
-                          a(href='#{val.DOI}') #{val.DOI}
+                          a(href=val.DOI) #{val.DOI}
                       else
                         div(class='value d-block') #{val.name} : n/a
 
@@ -41,7 +41,7 @@ block content
                     div(class='col-12')
                       if val.DOI
                         div(class='value d-block') #{val.name} : 
-                          a(href='#{val.DOI}') #{val.DOI}
+                          a(href=val.DOI) #{val.DOI}
                       else
                         div(class='value d-block') #{val.name} : n/a
 
@@ -56,9 +56,7 @@ block content
                       else
                         div(class='value d-block') #{val.name} : n/a
 
-  else
-
-    div(class='container-fluid')
+    else
 
       div(class='row metadata-view')
         div(class='col-12')
@@ -85,3 +83,6 @@ block content
               div(class='col-12')
                 div(class='value d-inline font-weight-bold') Data Sentence : 
                 div(class='value d-inline') #{val.text}
+
+  if demo
+    include ../forms/demo/finish.pug
