--- a/views/index.pug
+++ b/views/index.pug
@@ -33,23 +33,23 @@ block content
             <tbody>
               <tr>
                 <td>GET</td>
-                <td>api/document/:id</td>
+                <td>/api/document/:id</td>
                 <td>Get a single Document object with Id :id</td>
               </tr>
               <tr>
                 <td>POST</td>
-                <td>api/document/</td>
-                <td>Add a document (structure of data available in documentation)</td>
+                <td>/api/document/</td>
+                <td>Add a document (structure of data available in GitHub documentation)</td>
               </tr>
               <tr>
                 <td>PUT</td>
-                <td>api/document/:id</td>
-                <td>Modify the Document object with :id</td>
+                <td>/api/document/:id</td>
+                <td>Modify the Document object with Id :id</td>
               </tr>
               <tr>
                 <td>DELETE</td>
-                <td>api/document/:id</td>
-                <td>Delete the Document object with :id</td>
+                <td>/api/document/:id</td>
+                <td>Delete the Document object with Id :id</td>
               </tr>
             </tbody>
           </table>
