small issue with route of individual documents from the all doc view

--- a/views/documents/all.pug
+++ b/views/documents/all.pug
@@ -11,4 +11,4 @@ block content
     div(class='row')
       div(class='col-12')
         div(class='d-block')
-          a(href='documents/' + document._id) Document #{document._id}
+          a(href=document._id) Document #{document._id}
