--- a/views/documents/finish.pug
+++ b/views/documents/finish.pug
@@ -76,7 +76,7 @@ block content
 
             div(class='row dataset-view')
               div(class='col-12')
-                div(class='value d-block font-weight-bold') Dataset #{index + 1} :
+                div(class='value d-block font-weight-bold') Dataset #{index} :
               div(class='col-12')
                 div(class='value d-inline font-weight-bold') Data Type : 
                 div(class='value d-inline') #{val.dataType}
