Source code beautify
Dispatch & comment source code in separate files

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,7 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-.btn {
+.btn-primary {
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -47,12 +47,12 @@ root span.dataset {
   line-height: 1em;
 }
 
-#dataset-poperties-update-form .form-row {
+#dataset-poperties-form .form-row {
   margin-top: 5px;
   margin-bottom: 5px;
 }
 
-#dataset-poperties-update-form #remove_current_datatype {
+#dataset-poperties-form #remove_current_datatype {
   margin-left: 5px;
   margin-top: 0px;
   margin-bottom: 0px;
@@ -70,11 +70,11 @@ root span.dataset {
   margin-bottom: 25px !important;
 }
 
-#dataset-poperties-update-form {
+#dataset-poperties-form {
   display: none;
 }
 
-#dataset-update-form {
+#dataset-form {
   display: none;
   margin-top: 25 !important;
   margin-bottom: 25px !important;
