--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -9,13 +9,13 @@ block content
 
     div(class='row')
       div(class='col-6')
-        div(class='container-fluid document' id='xhtml') !{document.xhtml}
+        div(class='container-fluid document' id='dataset.xhtml') !{document.xhtml}
       div(class='col-6')
         div
           div(id='datasets-list' class='form')
-            include ../forms/listDatasets.pug
-          div(id='dataset-update-form' class='form')
-              include ../forms/updateDataset.pug
+            include ../forms/datasets/list.pug
+          div(id='dataset-form' class='form')
+              include ../forms/datasets/update-form.pug
 
     div(class='row')
       div(class='col-6 text-center')
