--- a/views/index.pug
+++ b/views/index.pug
@@ -16,6 +16,9 @@ block content
         div(class='d-block')
           h3
             a(href='documents') Get the list of documents
+        div(class='d-block')
+          h3
+            a(href='backoffice/upload') Add new document
       div(class='col-8')
         div(class='d-block')
           h2 API
