--- a/views/documents/finish.pug
+++ b/views/documents/finish.pug
@@ -12,7 +12,7 @@ block content
 
           div(class='container-fluid')
 
-            div(class='row metadata-view')
+            div(class='row row-margin')
               div(class='col-12')
                 div(class='key d-inline') Data Availability Statement : 
                 each val, index in document.datasets
@@ -32,7 +32,7 @@ block content
             div(class='row')
               div(class='col-12') Manuscript #: #{document.metadata.ManuscriptId}
 
-            div(class='row metadata-view')
+            div(class='row row-margin')
               div(class='col-12')
                 div(class='key d-inline') Data Availability Statement : 
                 each val, index in document.datasets
@@ -45,7 +45,7 @@ block content
                       else
                         div(class='value d-block') #{val.name} : n/a
 
-            div(class='row metadata-view')
+            div(class='row row-margin')
               div(class='col-12') Author Comments : 
                 each val, index in document.datasets
 
@@ -58,7 +58,7 @@ block content
 
     else
 
-      div(class='row metadata-view')
+      div(class='row row-margin')
         div(class='col-12')
           div(class='key d-inline font-weight-bold') Manuscript #: 
           div(class='value d-inline') #{document.metadata.ManuscriptId}
@@ -74,7 +74,7 @@ block content
           div(class='key d-inline')
           each val, index in document.datasets
 
-            div(class='row dataset-view')
+            div(class='row row-margin')
               div(class='col-12')
                 div(class='value d-block font-weight-bold') Dataset #{index} :
               div(class='col-12')
