--- a/views/forms/datasets/list.pug
+++ b/views/forms/datasets/list.pug
@@ -4,8 +4,12 @@ div(class='container-fluid')
       div(class='col-12')
         div(class='d-inline dataset-link' value=(key)) Dataset #{key}
         div(class='d-inline')
-          button(class='delete_dataset btn btn-danger btn-sm' value=(key)) Delete
+          button(class='delete_dataset btn btn-danger btn-sm' value=(key)) 
+            i(class='far fa-trash-alt') 
+        div(class='d-inline dataset_status')
+          i(class='fas fa-cogs')
   div(class='row dataset-item')
     div(class='col-12')
       div(class='d-inline')
-        button(class='add_datatype btn btn-primary btn-sm') Add new dataset
+        button(class='add_datatype btn btn-primary btn-sm') New Dataset 
+          i(class='fas fa-plus')
