Fix extraction "bug"
Camel case for each attributes of mongoDB objects (fix attributes od metadata)

Update extractor & views

You can now add document from backoffice (only TEI for the moment)

--- a/views/documents/finish.pug
+++ b/views/documents/finish.pug
@@ -30,7 +30,7 @@ block content
           div(class='container-fluid')
 
             div(class='row')
-              div(class='col-12') Manuscript #: #{document.metadata.ManuscriptId}
+              div(class='col-12') Manuscript #: #{document.metadata.manuscriptId}
 
             div(class='row row-margin')
               div(class='col-12')
@@ -61,13 +61,13 @@ block content
       div(class='row row-margin')
         div(class='col-12')
           div(class='key d-inline font-weight-bold') Manuscript #: 
-          div(class='value d-inline') #{document.metadata.ManuscriptId}
+          div(class='value d-inline') #{document.metadata.manuscriptId}
         div(class='col-12')
           div(class='key d-inline font-weight-bold') Submitting Author : 
-          div(class='value d-inline') #{document.metadata.SubmittingAuthor}
+          div(class='value d-inline') #{document.metadata.submittingAuthor}
         div(class='col-12')
           div(class='key d-inline font-weight-bold') Submitting Author email : 
-          div(class='value d-inline') #{document.metadata.SubmittingAuthoremail}
+          div(class='value d-inline') #{document.metadata.submittingAuthoremail}
 
       div(class='row')
         div(class='col-12')
