--- a/views/forms/datasets/list.pug
+++ b/views/forms/datasets/list.pug
@@ -6,8 +6,10 @@ div(class='container-fluid')
         div(class='d-inline')
           button(class='delete_dataset btn btn-danger btn-sm' value=(key)) 
             i(class='far fa-trash-alt') 
-        div(class='d-inline dataset_status')
+        div(class='d-inline warning warning-color-dark hidden' value=(key))
           i(class='fas fa-cogs')
+        div(class='d-inline success success-color-dark hidden' value=(key))
+          i(class='fas fa-check')
   div(class='row dataset-item')
     div(class='col-12')
       div(class='d-inline')
