--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -8,36 +8,28 @@ block content
         h1(class='text-center') DATASEER
 
     div(class='row')
-      div(class='col-7')
+      div(class='col-6')
         div(class='row row-margin')
           div(class='col-12 text-center')
             div(class='btn-group btn-group-toggle' data-toggle='buttons')
-              label(class='btn btn-success btn-sm active') FullText
+              label(class='btn btn-success btn-sm active') full text
                 input(type='radio' name='options' id='tei_all_visible' autocomplete='off' checked)
-              label(class='btn btn-success btn-sm') Dataseer Only
+              label(class='btn btn-success btn-sm') section
                 input(type='radio' name='options' id='tei_only_dataseer' autocomplete='off')
-              label(class='btn btn-success btn-sm disabled') Datasets only
+              label(class='btn btn-success btn-sm disabled') paragraph
                 input(type='radio' name='options' id='tei_only_datasets' autocomplete='off')
-      div(class='col-5')
-        div(class='row row-margin')
-          div(class='col-2 text-center')
-            button(id='datasets_save' class='btn btn-sm btn-success') Save 
-              i(class='far fa-save')
     div(class='row')
-      div(class='col-7')
+      div(class='col-6')
         div(class='row')
           div(class='col-12')
             div(id='document-view')
               div(class='container-fluid document' id='dataset.source') !{document.source}
-      div(class='col-5')
-        div(id='datasets-list' class='form')
-          include ../forms/datasets/list.pug
+      div(class='col-4')
         div(id='dataset-form' class='form')
             include ../forms/datasets/update-form.pug
-
-    div(class='row')
-      div(class='col-6 text-center')
-        button(id='datasets_validation' class='btn btn-primary') This info is correct : Continue  
+      div(class='col-2')
+        div(id='datasets-list' class='form')
+          include ../forms/datasets/list.pug
 
   if demo
     include ../forms/demo/datasets.pug
