--- a/views/forms/datasets/list.pug
+++ b/views/forms/datasets/list.pug
@@ -13,5 +13,9 @@ div(class='container-fluid')
   div(class='row dataset-item')
     div(class='col-12')
       div(class='d-inline')
-        button(class='add_datatype btn btn-primary btn-sm') New Dataset 
+        button(class='add_datatype btn btn-primary btn-sm disabled') New Dataset 
           i(class='fas fa-plus')
+    div(class='row dataset-item')
+      div(class='col-12')
+        div(class='d-inline')
+          button(id='datasets_validation' class='btn btn-primary') This info is correct : Continue 
