--- a/views/forms/datasets/update-form.pug
+++ b/views/forms/datasets/update-form.pug
@@ -1,76 +1,68 @@
 div(class='container-fluid')
   div(class='form-row')
     div(class='key d-inline') DataSet 
-    div(id='dataset.id' class='value d-inline')
-    div(id='dataset.status' class='value d-inline')
+    div(id='dataset.id' class='value')
+    div(id='dataset.status' class='value')
       div(class='d-inline warning warning-color-dark hidden')
         i(class='fas fa-cogs')
       div(class='d-inline success success-color-dark hidden')
         i(class='fas fa-check')
 
-div(id='dataset-dataType-form' class='container-fluid')
-  div(class='form-row')
-    label(for='dataset.selectedDataType') Please select the data type from the pull down menu : 
-
-  div(class='form-row')
-    select(class='form-control dataType' id='dataset.selectedDataType')
-      option(value='-1' selected) Select a data type
-      each dataType, index in dataTypes
-        option(value=(index)) #{dataType.dataType}
-    select(class='form-control hidden' id='dataset.selectedDescritpion')
-      option(value='-1' selected)
-      each dataType, index in dataTypes
-        option(value=(index)) #{dataType.descritpion}
-    select(class='form-control hidden' id='dataset.selectedBestDataFormatForSharing')
-      option(value='-1' selected)
-      each dataType, index in dataTypes
-        option(value=(index)) #{dataType.bestDataFormatForSharing}
-    select(class='form-control hidden' id='dataset.selectedMostSuitableRepositories')
-      option(value='-1' selected)
-      each dataType, index in dataTypes
-        option(value=(index)) #{dataType.mostSuitableRepositories}
-
-  div(class='form-row')
-    button(id='dataType_validation' class='btn btn-primary') Select this DataType : Continue 
-
 div(id='dataset-poperties-form' class='container-fluid')
   div(class='form-row')
     div(class='key d-inline font-weight-bold') Confidence : 
-    div(class='value d-inline' id='dataset.confidence')
+    div(class='value' id='dataset.confidence')
 
   div(class='form-row')
     div(class='key d-inline font-weight-bold') Data type : 
-    div(class='value d-inline' id='dataset.dataType')
-    div(class='d-inline')
-      button(id='remove_current_datatype' class='btn btn-primary btn-sm')
-        i(class='far fa-edit')
+    div(id='currentDataType')
+      div(class='value' id='dataset.dataType')
+      div(class='value')
+        button(id='remove_current_datatype' class='btn btn-primary btn-sm')
+          i(class='far fa-edit')
+    div(id='dataset-dataType-form')
+      select(class='form-control' id='dataset.selectedDataType')
+        each dataType, index in dataTypes
+          option(value=(index)) #{dataType.dataType}
+      select(class='form-control hidden' id='dataset.selectedDescritpion')
+        each dataType, index in dataTypes
+          option(value=(index)) #{dataType.descritpion}
+      select(class='form-control hidden' id='dataset.selectedBestDataFormatForSharing')
+        each dataType, index in dataTypes
+          option(value=(index)) #{dataType.bestDataFormatForSharing}
+      select(class='form-control hidden' id='dataset.selectedMostSuitableRepositories')
+        each dataType, index in dataTypes
+          option(value=(index)) #{dataType.mostSuitableRepositories}
+      button(id='dataType_validation' class='btn btn-primary btn-sm')
+        i(class='far fa-save')
+      button(id='dataType_cancel' class='btn btn-primary btn-sm') 
+        i(class='far fa-window-close')
 
   div(class='form-row')
     div(class='key d-inline font-weight-bold') Description : 
-    div(class='value d-inline' id='dataset.descritpion')
+    div(class='value' id='dataset.descritpion')
 
   div(class='form-row')
     div(class='key d-inline font-weight-bold') Best data format for sharing : 
-    div(class='value d-inline' id='dataset.bestDataFormatForSharing')
+    div(class='value' id='dataset.bestDataFormatForSharing')
 
   div(class='form-row')
     div(class='key d-inline font-weight-bold') Most suitable Repositories : 
-    div(class='value d-inline' id='dataset.mostSuitableRepositories')
+    div(class='value' id='dataset.mostSuitableRepositories')
 
-  div(class='form-row')
+  div(class='form-row row-margin')
     label(for='dataset.name') Please provide a name for this dataset (e.g. 'heart pressure data') : 
     input(type='text' class='form-control name' id='dataset.name' placeholder='' value='')
 
-  div(class='form-row')
+  div(class='form-row row-margin')
     label(for='dataset.DOI') Please provide the DOI (or other stable link) to this dataset : 
     input(type='text' class='form-control DOI' id='dataset.DOI' placeholder='' value='')
 
-  div(class='form-row')
+  div(class='form-row row-margin')
     label(for='dataset.comments') Please enter any comments here (such as a reason why this dataset cannot be shared):
     textarea(class='form-control comments' id='dataset.comments' rows='3')
 
   div(class='form-row')
-    div(class='col-6')
-      button(id='dataset_validation' class='btn btn-primary btn-sm') This info is correct : Continue 
-    div(class='col-6')
-      button(id='dataset_cancel' class='float-right btn btn-primary btn-sm') Cancel 
+    div(class='col-12')
+      button(id='dataset_validation' class='btn btn-primary btn-sm') Save DataSet 
+        i(class='far fa-save')
