Fix absolute path
No longer absolute path for statuc file, only relative now

--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -113,7 +113,7 @@ body>.container-fluid>div.row:nth-child(4) {
   display: inline-block;
 }
 
-#dataset-dataType-form #dataType_validation, #dataset-dataType-form #dataType_validation  {
+#dataset-dataType-form #dataType_validation {
   display: inline-block;
   margin-left: 5px;
   margin-right: 5px;
