--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -16,7 +16,7 @@ block content
                 input(type='radio' name='options' id='tei_all_visible' autocomplete='off' checked)
               label(class='btn btn-success btn-sm') section
                 input(type='radio' name='options' id='tei_only_dataseer' autocomplete='off')
-              label(class='btn btn-success btn-sm disabled') paragraph
+              label(class='btn btn-success btn-sm') paragraph
                 input(type='radio' name='options' id='tei_only_datasets' autocomplete='off')
     div(class='row')
       div(class='col-6')
