--- a/views/forms/datasets/update-form.pug
+++ b/views/forms/datasets/update-form.pug
@@ -52,11 +52,11 @@ div(id='dataset-poperties-form' class='container-fluid')
 
   div(class='form-row row-margin')
     label(for='dataset.name') Please provide a name for this dataset (e.g. 'heart pressure data') : 
-    input(type='text' class='form-control name' id='dataset.name' placeholder='' value='')
+    input(type='text' class='form-control' id='dataset.name' placeholder='' value='')
 
   div(class='form-row row-margin')
     label(for='dataset.DOI') Please provide the DOI (or other stable link) to this dataset : 
-    input(type='text' class='form-control DOI' id='dataset.DOI' placeholder='' value='')
+    input(type='text' class='form-control' id='dataset.DOI' placeholder='' value='')
 
   div(class='form-row row-margin')
     label(for='dataset.comments') Please enter any comments here (such as a reason why this dataset cannot be shared):
