--- a/views/forms/datasets/list.pug
+++ b/views/forms/datasets/list.pug
@@ -11,11 +11,13 @@ div(class='container-fluid')
         div(class='d-inline success success-color-dark hidden' value=(key))
           i(class='fas fa-check')
   div(class='row dataset-item')
-    div(class='col-12')
+    div(class='col-6')
+      input(type='text' class='form-control' id='newDataset.id' placeholder='dataset-id' value='')
+    div(class='col-6')
       div(class='d-inline')
-        button(class='add_datatype btn btn-primary btn-sm disabled') New Dataset 
+        button(class='btn btn-primary btn-sm' id="add_dataset") 
           i(class='fas fa-plus')
     div(class='row dataset-item')
-      div(class='col-12')
+      div(class='col-6')
         div(class='d-inline')
           button(id='datasets_validation' class='btn btn-primary') This info is correct : Continue 
